# rixsviewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  make_icon.py  pyproject.toml
.clinerules/: python.md
.github/workflows/: publish.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  rixsviewer.model.rst  rixsviewer.rst  rixsviewer.view.rst  rixsviewer.view.ui.rst  user_guide.rst
src/rixsviewer/: __init__.py  binning_model.py  convert_ui.sh  imageview.py  rixs_image.py  rixsviewer.ui  rixsviewer_gui.py  rixsviewer_ui.py  specfile_reader.py  widgets.py
src/rixsviewer/model/: __init__.py  bad_pixels.py  binning_model.py  process_parameters.py  scan_dataset.py  spec_parsers.py  spec_table.py  specfile_reader.py  utils.py
src/rixsviewer/view/: __init__.py  view.py
src/rixsviewer/view/ui/: __init__.py  convert_ui.sh  rixsviewer.ui  rixsviewer_ui.py
