[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rixsviewer"
version = "0.1.0"
description = "A tool for visualization and modeling of RIXS (Resonance Inelastic X-ray Scattering) data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "MQICHU", email = "your.email@example.com" }]
keywords = [
    "RIXS",
    "X-ray scattering",
    "spectroscopy",
    "visualization",
    "modeling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PySide6>=6.0.0",
    "silx>=1.0.0",
    "numpy>=1.20.0",
    "pyqtgraph",
    "tifffile",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0"]
docs = ["sphinx>=6.0.0", "sphinx-rtd-theme>=1.0.0", "numpydoc>=1.5.0"]

[project.scripts]
rixsviewer = "rixsviewer.rixsviewer_gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/rixsviewer"
Documentation = "https://github.com/yourusername/rixsviewer/blob/main/README.md"
Repository = "https://github.com/yourusername/rixsviewer"
"Bug Tracker" = "https://github.com/yourusername/rixsviewer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rixsviewer = ["*.ui"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
